--- a/src/components/SingleMovie.css
+++ b/src/components/SingleMovie.css
@@ -4,9 +4,17 @@
     margin-top: 20px;
     object-fit: cover;
     transition: all ease .15s;
+    position: relative;
 
 }
 .moviePoster:hover{
     transition: all ease .15s;
     transform: scale(1.1);
+}
+p{
+    position: absolute;
+    bottom:0; 
+    left:0;
+    right: 0;
+    margin: auto;
 }
