--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -10,3 +10,17 @@
 .buttonSearch {
   background-color: transparent !important;
 }
+.button-modal{
+  background-color: transparent!important;
+  position:absolute;
+  top:30px;
+  left:40px;
+  font-weight: bold;
+  border: 2px solid  rgba(128, 128, 128, 0.438)!important;
+  border-radius: 50%;
+}
+.button-modal:focus,
+.button-modal:active{
+  border: 1px solid transparent!important;
+  box-shadow: transparent!important;
+}
