--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -31,3 +31,32 @@
   background-color: white!important;
   color: black!important;
 }
+
+
+.delete{
+  border-radius: 50%;
+  background-color: transparent!important;
+  border: 2px solid red!important;
+  color: red!important;
+  padding:2px 8px 7px 8px;
+  transition: .30s ease-in-out;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.delete:hover{
+  border-radius: 50%;
+  background-color: red!important;
+  border: 2px solid red!important;
+  transition: .30s ease-in-out;
+  color: #fff!important;
+}
+.list-item{
+  background-color: rgba(0,0,0,0.5);
+    color: white;
+    border: 2px solid rgba(12, 12, 12, 0.5);
+}
+.title{
+  color: white;
+}
