DONE- adding jumbotron and styling to navbar on scroll

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,10 +1,12 @@
 .navBar {
-  background-color: #2c2c2c !important;
   box-shadow: 0 4px 4px -3px #3a3a3aa8;
+  z-index:999999!important;
 }
 
 .navLink {
   color: #f5f5f1 !important;
+  z-index: 4000;
+  position: relative;
 }
 
 .buttonSearch {
@@ -60,3 +62,4 @@
 .title{
   color: white;
 }
+
