--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -2,7 +2,7 @@ select{
     height:30px;
     padding:0;
     margin-left: 30px;
-    background-color: #2c2c2c;
+    background-color:#1f1e1e;
     border: 1px solid #fff;
     color:  #fff;
     border-radius: 2px;
