DONE- adding registration form

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,6 @@
 .navBar {
-  box-shadow: 0 4px 4px -3px #3a3a3aa8;
   z-index:999999!important;
+  box-shadow: none!important;
 }
 
 .navLink {
@@ -63,3 +63,12 @@
   color: white;
 }
 
+@media(max-width: 768px){
+  .toggle{
+    color: #fff!important;
+  }
+  .navBar {
+    z-index:999999!important;
+    background-color: #1f1e1e!important;
+  }
+}
