--- a/src/components/Jumbotron.css
+++ b/src/components/Jumbotron.css
@@ -11,7 +11,10 @@
     z-index: 3000;
     background-image: linear-gradient(to top,#1f1e1e, #2f2f2f6b, #37373767, #3e3e3e41, #46464600);
   }
-  
+ .jumbotron{
+     top:0;
+     background-color: #1f1e1e;
+ } 
 .watch,
 .watch:hover{
     background-color: rgb(241, 241, 241)!important;
@@ -26,6 +29,7 @@
     border: 2px solid rgba(128, 128, 128, 0.747)!important;
     padding: 7px 15px;
     font-size: 18px;
+    color: white;
 
 
 }
@@ -34,9 +38,65 @@
     border: 2px solid rgba(128, 128, 128, 0.747)!important;
     padding: 7px 15px;
     font-size: 18px;
+    color: white;
+
 
 
 }
 .movie-title{
     font-size:70px;
+    font-family: fantasy;
+    
+}
+.text-div{
+    position: absolute;
+    z-index: 5000;
+    top: 64%;
+    color: #fff;
+}
+.play,
+.info{
+    font-size:"28px"
+}
+@media(max-width:768px){
+    .watch,
+.watch:hover{
+    background-color: rgb(241, 241, 241)!important;
+    color: #000;
+    border: 2px solid rgb(241, 241, 241)!important;
+    padding: 7px 15px;
+    font-size: 14px;
+}
+
+.more{
+    background-color: rgba(128, 128, 128, 0.747);
+    border: 2px solid rgba(128, 128, 128, 0.747)!important;
+    padding: 7px 15px;
+    font-size: 14px;
+
+
+}
+.more:hover{
+    background-color: rgba(128, 128, 128, 0.747);
+    border: 2px solid rgba(128, 128, 128, 0.747)!important;
+    padding: 7px 15px;
+    font-size: 14px;
+
+
+}
+.movie-title{
+    font-size:50px;
+    font-family: fantasy;
+    
+}
+.text-div{
+    position: absolute;
+    z-index: 5000;
+    top: 50%;
+    color: #fff;
+}
+.play,
+.info{
+    font-size:"20px"
+}
 }
